; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/cyclone/tests/extr_test_misc2_gen.c_safe_rand.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/cyclone/tests/extr_test_misc2_gen.c_safe_rand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i16 ()* @safe_rand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i16 @safe_rand() #0 {
  %1 = alloca i16, align 2
  br label %2

2:                                                ; preds = %4, %0
  %3 = call zeroext i16 (...) @rand()
  store i16 %3, i16* %1, align 2
  br label %4

4:                                                ; preds = %2
  %5 = load i16, i16* %1, align 2
  %6 = call i32 @op_check(i16 zeroext %5)
  %7 = icmp ne i32 %6, 0
  %8 = xor i1 %7, true
  br i1 %8, label %2, label %9

9:                                                ; preds = %4
  %10 = load i16, i16* %1, align 2
  ret i16 %10
}

declare dso_local zeroext i16 @rand(...) #1

declare dso_local i32 @op_check(i16 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
